--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
  "scripts": {
   "dev": "vite",
   "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview"
+  "deploy": "gh-pages -d dist",
+  "predeploy": "npm run build"
  },
  "dependencies": {
   "react": "^19.2.0",
